@@ -1,3 +1,4 @@
+11 Jan 2008 new 'ctc' command to enable/disable debug option on demand - Fish
 03 Jan 2008 sf commands update - Greg Smith
 01 Jan 2008 Data exception on nonzero bit34 in cce entry - Bernard van der Helm
 31 Dec 2007 Data exceptions on fetching ece, cce and sd1 - Bernard van der Helm
